infra/k8s/service1-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: path1
  namespace: eks-sample
spec:
  selector:
    matchLabels:
      app: path1
  replicas: 2
  template:
    metadata:
      labels:
        app: path1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: path1
        image: maheshs60/kube-path1:latest

---
apiVersion: v1
kind: Service
metadata:
  name: path1
  namespace: eks-sample
spec:
  selector:
    app: path1
  ports:
    - name: path1
      protocol: TCP
      port: 80
      targetPort: 80
