infra/k8s/service2-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: eks-sample
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: test
        image: maheshs60/kube-test:latest

---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: eks-sample
spec:
  selector:
    app: test
  ports:
    - name: test
      protocol: TCP
      port: 80
      targetPort: 80
