infra/k8s/deployment_full.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: path1
  namespace: eks-sample
spec:
  selector:
    matchLabels:
      app: path1
  replicas: 2
  template:
    metadata:
      labels:
        app: path1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: path1
        image: maheshs60/kube-path1:latest

---
apiVersion: v1
kind: Service
metadata:
  name: path1
  namespace: eks-sample
spec:
  selector:
    app: path1
  ports:
    - name: path1
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: eks-sample
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: test
        image: maheshs60/kube-test:latest

---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: eks-sample
spec:
  selector:
    app: test
  ports:
    - name: test
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv-eks
  namespace: eks-sample
  annotations:
    alb.ingress.kubernetes.io/use-regex: "true"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /path1
            pathType: Prefix
            backend:
              service:
                name: path1
                port:
                  number: 80
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
