infra/k8s/ingress-srv-eks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv-eks
  namespace: eks-sample
  annotations:
    alb.ingress.kubernetes.io/use-regex: "true"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /path1
            pathType: Prefix
            backend:
              service:
                name: path1
                port:
                  number: 80
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
