infra/k8s/ingress-srv-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 4000
          - path: /path1
            pathType: Prefix
            backend:
              service:
                name: path1
                port:
                  number: 4001
